// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package main;

option go_package = "infra/tools/pkgbuild/cmd/edge;main";

// Proto message which reflects the input properties fora the pkgbuild recipe.
// See more detailed description for each field there.
message Input {
  // Target CIPD platform for packages.
  string target_platform = 2;

  // Storage directory for build and cache packages.
  string storage_dir = 3;
  // Spec pool directory for finding 3pp specs.
  string spec_pool = 4;

  // CIPD service URL for downloading and uploading packages.
  string cipd_service = 5;
  // If true, upload packages to CIPD service.
  bool upload = 6;
  // The prefix to use for uploading built packages.
  string cipd_package_prefix = 7;

  // Snoopy service URL for reporting artifact hash.
  string snoopy_service = 8;
}
